<resources>
    <string name="app_name">Sarshomar</string>
    <string name="tab_poll">Polls</string>
    <string name="tab_new_poll">New Poll</string>
    <string name="tab_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help Center</string>
    <string name="action_profile">Profile</string>


    <!-- INTRO STRING -->

    <string name="test_welcom">Welcome To Sarshomar!</string>

    <!-- SETTINGS STRINGS -->
    <string name="setting">Settings</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_language_desc">Choose App Language</string>
    <string name="accept">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Do you want to exit?</string>


    <string-array name="listArray">
        <item>English</item>
        <item>فارسی</item>
    </string-array>

    <string-array name="listValues">
        <item>en</item>
        <item>fa</item>
    </string-array>


    <!-- POLLS STRINGS -->
    <string name="previous">PREVIOUS</string>
    <string name="verify_choice">OK</string>
    <string name="next">NEXT</string>
    <string name="answer">Answer:</string>
    <string name="download">Download</string>
    <string name="poll_results">Poll Results</string>
    <string name="askme">Ask Me</string>

    <string name="profile">Profile</string>
    <string name="loginwithgoogle">sign in with google account</string>

    <string-array name="profile_array">
        <item>My Profile</item>
        <item>My Polls</item>
        <item>Finance</item>
        <item>Edit Profile</item>
        <item>Logout</item>
    </string-array>

    <!-- NEW POLL STRINGS -->
    <string-array name="poll_type_array">
        <item>Single Choice</item>
        <item>Multiple Choice</item>
        <item>Notify</item>
        <item>Score</item>
        <item>Descriptive</item>
        <item>File</item>
        <item>Range Bar</item>
    </string-array>

    <string name="type_title">Poll Type:</string>

    <string name="new_title">Title</string>

    <string name="new_description">Description</string>

    <string name="new_option">New Option</string>

    <string name="new_true">True Option</string>

    <string name="new_submit">Submit</string>

    <string name="options_title">Options</string>

    <string name="new_option_error">Option title can not be empty</string>

    <string name="photo_title">Poll Thumbnail</string>

    <string name="upload">Upload</string>

    <string name="choosefromgallery">Choose From Gallery</string>

    <string name="takephoto">Take Photo</string>

    <string name="addphoto">Choose Photo</string>

    <string name="wanttoremove">Do you Want to remove this Option?</string>

    <string name="uploadfile">Upload File:</string>

    <string name="numbersrange">Numbers Range:</string>

    <string name="from">From:</string>

    <string name="to">To:</string>


    <string name="singlechoice">Single Choice</string>

    <string name="multiplechoice">Multiple Choice</string>

    <string name="notify">Notify</string>

    <string name="score">Score</string>

    <string name="descriptive">Descriptive</string>

    <string name="file">File</string>

    <string name="rangebar">Range Bar</string>

    <string name="title_activity_main2">Main2Activity</string>

    <string name="taptochoosetrue">- Tap an option to set it as true answer(s)</string>

    <string name="holdtodelete">- Hold an option to delete it</string>

    <string name="hideresults">Hide Poll Results </string>

    <string name="new_tags">Tags</string>

    <string name="cat_title">Categories:</string>

    <string name="schedule_title">Schedule Publish:</string>

    <string name="pickdate">Pick Start Date And Time</string>

    <string name="pickdateend">Pick End Date And Time</string>

    <string name="age_title">Limit Age</string>

    <string name="graduate_title">Limit Graduate</string>

    <string name="marriage_title">Limit Marrital</string>

    <string name="employ_title">Limit Employment</string>

    <string name="underdiploma">Under Diploma</string>

    <string name="Diploma">Diploma</string>

    <string name="twoyear">2 Year College</string>

    <string name="bachelor">Bachelor</string>

    <string name="master">Master</string>

    <string name="phd">Phd</string>

    <string name="employed">Employed</string>

    <string name="unemployed">Unemployed</string>

    <string name="retired">Retired</string>

    <string name="married">Married</string>

    <string name="single">Single</string>

    <string name="gender">Gender</string>

    <string name="male">Male</string>

    <string name="female">Female</string>






</resources>
