<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <View
            android:background="#ee40af88"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>


        <TextView
            android:layout_width="match_parent"
            android:text="@string/numbersrange"
            android:layout_marginTop="40dp"
            tools:ignore="MissingPrefix"
            fontPath="fonts/IRANSans.ttf"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            
            <TextView
                android:layout_width="0dp"
                android:textColor="#000"
                android:layout_weight="1"
                android:layout_marginTop="13dp"
                android:text="@string/from"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:inputType="number"

                android:layout_height="wrap_content"
                android:id="@+id/rangebar_from_edittext"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="0dp"
                android:textColor="#000"
                android:layout_marginStart="10dp"
                android:layout_marginTop="13dp"
                android:layout_weight="1"
                android:text="@string/to"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="0dp"
                android:inputType="number"
                android:layout_weight="3"

                android:layout_height="wrap_content"
                android:id="@+id/rangebar_to_edittext"
                android:textSize="15sp"
                />




        </LinearLayout>






    </LinearLayout>






</RelativeLayout>

